# convolutional-neural-network

./: .gitignore  CMakeLists.txt  Data.hpp  LICENSE  Makefile  Network.hpp  Params.hpp  README.md  conv1.cpp  conv2.cpp  conv3.cpp  fc.cpp  fc2.cpp  get-mnist.sh  main.cpp  main2.cpp  main3.cpp  main4.cpp  nn.cpp
extra/: conv1.py  conv2.py  fc.py
