cmake_minimum_required(VERSION 3.4.3)
project(NeuralNet CXX)
find_package(Boost REQUIRED)
set(Boost_USE_STATIC_LIBS OFF)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -march=native")
add_executable(fc1 fc1.cpp)
add_executable(fc2 fc2.cpp)
target_link_libraries(fc1 ${Boost_LIBRARIES})
target_link_libraries(fc2 ${Boost_LIBRARIES})
